Salesforce/main/default/main/default/objects/Atributo_venda_de_basica__mdt/fields/Nome_de_usu_rio_atribu_do__c.field-meta.xml
<CustomField>
    <fullName>Nome_de_usu_rio_atribu_do__c</fullName>
    <label>Nome de usuário atribuído</label>
    <length>255</length>
    <type>Text</type>
</CustomField>