Salesforce/main/default/main/default/objects/Atributo_venda_de_basica__mdt/fields/Usuario_gerente__c.field-meta.xml
<CustomField>
    <fullName>Usuario_gerente__c</fullName>
    <label>Usuário gerente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>