Salesforce/main/default/main/default/objects/Atributo_venda_de_basica__mdt/fields/Usuario_Gerente_de_Marca__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Gerente_de_Marca__c</fullName>
    <label>Usuario Gerente de Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>